--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-  {
-  "name": "tsystem1",
+{
+  "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -45,11 +45,11 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^14.1.0",
+    "next": "15.1.0",
     "next-themes": "latest",
-    "react": "^18.2.0",
+    "react": "^19",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
@@ -58,6 +58,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
+    "pg-native": "latest",
     "pg": "latest",
     "gel": "latest",
     "knex": "latest",
@@ -85,13 +86,15 @@
     "@neondatabase/serverless": "latest",
     "@cloudflare/workers-types": "latest",
     "@op-engineering/op-sqlite": "latest",
-    "pg-native": "latest",
+    "@auth/core": "latest",
+    "nodemailer": "latest",
+    "fs": "latest",
+    "path": "latest",
     "web-push": "latest",
-    "drizzle-orm": "latest",
     "idb": "latest",
     "nanoid": "latest",
-    "fs": "latest",
-    "path": "latest"
+    "drizzle-orm": "latest",
+    "next-auth": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
