--- a/package.json
+++ b/package.json
@@ -41,60 +41,25 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "latest",
+    "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.1.0",
-    "next-themes": "latest",
+    "next": "15.2.4",
+    "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
-    "react-hook-form": "latest",
+    "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "latest",
-    "sonner": "latest",
+    "recharts": "2.15.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
-    "pg-native": "latest",
-    "pg": "latest",
-    "gel": "latest",
-    "knex": "latest",
-    "kysely": "latest",
-    "mysql2": "latest",
-    "sql.js": "latest",
-    "sqlite3": "latest",
-    "postgres": "latest",
-    "@types/pg": "latest",
-    "bun-types": "latest",
-    "expo-sqlite": "latest",
-    "@types/sql.js": "latest",
-    "@libsql/client": "latest",
-    "@prisma/client": "latest",
-    "better-sqlite3": "latest",
-    "@xata.io/client": "latest",
-    "@vercel/postgres": "latest",
-    "@opentelemetry/api": "latest",
-    "@libsql/client-wasm": "latest",
-    "@electric-sql/pglite": "latest",
-    "@planetscale/database": "latest",
-    "@tidbcloud/serverless": "latest",
-    "@types/better-sqlite3": "latest",
-    "@aws-sdk/client-rds-data": "latest",
-    "@neondatabase/serverless": "latest",
-    "@cloudflare/workers-types": "latest",
-    "@op-engineering/op-sqlite": "latest",
-    "@auth/core": "latest",
-    "nodemailer": "latest",
-    "fs": "latest",
-    "path": "latest",
-    "web-push": "latest",
-    "drizzle-orm": "latest",
-    "idb": "latest",
-    "nanoid": "latest",
-    "next-auth": "latest"
+    "prisma": "latest",
+    "@prisma/client": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
