--- a/package.json
+++ b/package.json
@@ -59,7 +59,38 @@
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "prisma": "latest",
-    "@prisma/client": "latest"
+    "pg": "latest",
+    "gel": "latest",
+    "knex": "latest",
+    "kysely": "latest",
+    "mysql2": "latest",
+    "sql.js": "latest",
+    "sqlite3": "latest",
+    "postgres": "latest",
+    "@types/pg": "latest",
+    "bun-types": "latest",
+    "expo-sqlite": "latest",
+    "@types/sql.js": "latest",
+    "@libsql/client": "latest",
+    "@prisma/client": "latest",
+    "better-sqlite3": "latest",
+    "@xata.io/client": "latest",
+    "@vercel/postgres": "latest",
+    "@opentelemetry/api": "latest",
+    "@libsql/client-wasm": "latest",
+    "@electric-sql/pglite": "latest",
+    "@planetscale/database": "latest",
+    "@tidbcloud/serverless": "latest",
+    "@types/better-sqlite3": "latest",
+    "@aws-sdk/client-rds-data": "latest",
+    "@neondatabase/serverless": "latest",
+    "@cloudflare/workers-types": "latest",
+    "@op-engineering/op-sqlite": "latest",
+    "@auth/core": "latest",
+    "nodemailer": "latest",
+    "drizzle-orm": "latest",
+    "idb": "latest",
+    "next-auth": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
