--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next",
-      "config": {
-        "installCommand": "pnpm install",
-        "buildCommand": "prisma generate && next build"
-      }
-    }
-  ]
+  "buildCommand": "prisma generate && next build",
+  "installCommand": "pnpm install",
+  "framework": "nextjs"
 }
 
