--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "zod": "^3.24.1",
     "@auth/core": "latest",
     "nodemailer": "latest",
-    "prisma": "latest",
     "pg": "latest",
     "gel": "latest",
     "knex": "latest",
@@ -88,11 +87,13 @@
     "@neondatabase/serverless": "latest",
     "@cloudflare/workers-types": "latest",
     "@op-engineering/op-sqlite": "latest",
+    "prisma": "latest",
     "pg-native": "latest",
     "next-auth": "latest",
     "web-push": "latest",
     "idb": "latest",
-    "drizzle-orm": "latest"
+    "drizzle-orm": "latest",
+    "bcryptjs": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
