--- a/package.json
+++ b/package.json
@@ -41,25 +41,24 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
-    "next-themes": "^0.4.4",
+    "next": "15.1.0",
+    "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
-    "react-hook-form": "^7.54.1",
+    "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.0",
-    "sonner": "^1.7.1",
+    "recharts": "latest",
+    "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
-    "@auth/core": "latest",
-    "nodemailer": "latest",
+    "pg-native": "latest",
     "pg": "latest",
     "gel": "latest",
     "knex": "latest",
@@ -87,13 +86,15 @@
     "@neondatabase/serverless": "latest",
     "@cloudflare/workers-types": "latest",
     "@op-engineering/op-sqlite": "latest",
-    "prisma": "latest",
-    "pg-native": "latest",
-    "next-auth": "latest",
+    "@auth/core": "latest",
+    "nodemailer": "latest",
+    "fs": "latest",
+    "path": "latest",
     "web-push": "latest",
-    "idb": "latest",
     "drizzle-orm": "latest",
-    "bcryptjs": "latest"
+    "idb": "latest",
+    "nanoid": "latest",
+    "next-auth": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
